# mongo-changestream-to-bigquery

./: .gitignore  README.md  config.yml.example  requirements.txt  setup.cfg
src/mongo_changestream_to_bigquery/: __init__.py  __main__.py  change_stream_to_bigquery.py  cli.py  mongo.py  utils.py
