[metadata]
name = mongo_changestream_to_bigquery
version = 1.0.1

[options]
install_requires =
    python-liquid
    google-cloud-bigquery
    pymongo
python_requires = >=3.6.1
zip_safe = False
packages = find:
package_dir=
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mongo-changestream-to-bigquery = mongo_changestream_to_bigquery.cli:main